# VNVitaPrototype

./: .gitignore  CMakeLists.txt  README.md  VNVita.sln  cmakelists.txt
Lib/x64/: SDL2.lib  SDL2main.lib
VNVita/: GameState.cpp  GameState.h  GameStateManager.cpp  GameStateManager.h  Main.cpp  NullState.cpp  NullState.h  Program.cpp  Program.h  VNVita.vcxproj  VNVita.vcxproj.filters
VNVita/sce_sys/livearea/contents/: template.xml
